<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDBABA"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="147dp"
        android:layout_height="117dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/YourHealthManual"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="40dp"
                android:layout_height="36dp"
                android:layout_marginTop="10dp"
                android:text="@string/Age"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="55dp"
                android:layout_height="31dp"
                android:layout_marginTop="5dp"
                android:text="@string/high"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="55dp"
                android:layout_height="31dp"
                android:layout_marginTop="5dp"
                android:text="@string/weight"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edtAge"
                android:layout_width="78dp"
                android:layout_height="39dp"
                android:ems="10" />

            <EditText
                android:id="@+id/edtHigh"
                android:layout_width="78dp"
                android:layout_height="39dp"
                android:ems="10" />

            <EditText
                android:id="@+id/edtWeight"
                android:layout_width="78dp"
                android:layout_height="39dp"
                android:ems="10"/>
        </LinearLayout>
    </LinearLayout>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="199dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAge">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/gender"
            android:textColor="#0B0707"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:text="@string/male"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/female"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/btCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#25485B"
        android:text="@string/calculate"
        android:textColor="#BDBABA"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="59dp"
            android:layout_height="33dp"
            android:text="@string/Result"
            android:textColor="#0D0808"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerGoals"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btCreatePlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#25485B"
        android:text="@string/CreatePlan"
        android:textColor="#BDBABA"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>